# privplay

./: .gitignore  README.md  academic_evaluation.py  calibration_collect.py  calibration_data.json  calibration_fit.py  calibration_models.json  create_golden_dataset.py  create_golden_dataset_v2.py  create_hard_negatives.py  create_synthetic_pii.py  curate_ai4privacy.py  diagnose_fps.py  diagnose_types.py  diagnostic.py  diagnostic_report.txt  gliner_experiment.py  hard_negatives.json  lambda_train.sh  merge_datasets.py  pyproject.toml  requirements.txt  retrain_meta.py  run_nervaluate.py  test_e2e.py  test_smoke.py  test_suite.py  trace_pipeline.py  tree.txt
archive/: extract_dictionaries.py  review_benchmark.py  test_sdk_hardcore.py  train_pii_model.py
build_docs/: privplay_12.11.2025  session_summary_2025-12-14.md
eval_results/: evaluation_report.md  evaluation_results.json
pii_bert_v2/final/: config.json  label_map.json
privplay/: __init__.py  allowlist.py  audit.py  cli.py  cli_learn.py  client.py  config.py  create_golden_dataset.py  db.py  documents.py  sdk.py  train_pii_bert.py  types.py
privplay/archive/: cli (2).py  cli (3).py  cli (4).py  cli.py
privplay/benchmark/: __init__.py  datasets.py  nervaluate_runner.py  runner.py  storage.py
privplay/dictionaries/: __init__.py  downloader.py  loader.py  npi.py
privplay/engine/: calibration.py  classifier.py  coreference.py  types.py
privplay/learning/: __init__.py  hil_tui.py  integration.py  signal_store.py  trainer.py
privplay/shdm/: __init__.py  safe_harbor.py  session.py  (+2 more)
tests/: tune_stack.py
(+38 files in other folders)
